Fix vertical overflow on smaller screen

--- a/watchlist-creator/index.css
+++ b/watchlist-creator/index.css
@@ -53,7 +53,7 @@ body {
   .nav--section {
     width: 100%;
     border-radius: 0;
-    padding: 60px 0 65px;
+    padding: 50px 0 55px;
     flex-direction: column;
     gap: 40px;
   }
